Cart quantity and order placement done admin side too

--- a/sportsio/templates/admin_side/base.html
+++ b/sportsio/templates/admin_side/base.html
@@ -81,7 +81,15 @@
                 <span>
                   <i class="ti ti-typography"></i>
                 </span>
-                <span class="hide-menu">Invetory</span>
+                <span class="hide-menu">Inventory</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="{% url 'order_management' %}" aria-expanded="false">
+                <span>
+                  <i class="ti ti-typography"></i>
+                </span>
+                <span class="hide-menu">Order Management</span>
               </a>
             </li>
             <li class="nav-small-cap">
