--- a/sportsio/templates/user_side/edit_address.html
+++ b/sportsio/templates/user_side/edit_address.html
@@ -48,6 +48,7 @@
           </div>
         </div>
         <button class="btn btn-sm btn-primary" type="submit">Submit form</button>
+        <button class="btn btn-sm btn-danger" type="reset"><a href={% url 'user_profile:user_profile'%}>Back</a></button>
       </form>
     </div>
     
